# moltbook-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: privacy-patterns.json
moltbook_mcp/: api.py  logger.py  privacy.py  sanitize.py  server.py  state.py
