[project]
name = "moltbook-mcp"
version = "0.1.0"
description = "MCP server for the Moltbook social platform"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Ben Lamm"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
moltbook-mcp = "moltbook_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["moltbook_mcp*"]
